# ottoengine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  TODO  main.cpp
src/graphics/: renderloop.cpp  renderloop.h
src/logic/: gameobject.h  transform.h
